--- a/sc-goods-web/src/main/resources/templates/item.html
+++ b/sc-goods-web/src/main/resources/templates/item.html
@@ -212,17 +212,18 @@
                             <div class="fl title">
                                 <div class="control-group">
                                     <div class="controls">
-                                        <input autocomplete="off" type="text" disabled value="1" minnum="1"
+                                        <input autocomplete="off" type="text" v-model="num" disabled value="1"
+                                               minnum="1"
                                                class="itxt"/>
-                                        <a href="javascript:void(0)" class="increment plus">+</a>
-                                        <a href="javascript:void(0)" class="increment mins">-</a>
+                                        <a href="javascript:void(0)" class="increment plus" @click="increment">+</a>
+                                        <a href="javascript:void(0)" class="increment mins" @click="decrement">-</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="fl">
                                 <ul class="btn-choose unstyled">
                                     <li>
-                                        <a href="success-cart.html" target="_blank"
+                                        <a href="#" @click="addCart()" target="_blank"
                                            class="sui-btn  btn-danger addshopcar">加入购物车</a>
                                     </li>
                                 </ul>
@@ -457,7 +458,8 @@
                                         <h3>{{group.name}}</h3>
                                         <dl>
                                             <div v-for="p in group.params">
-                                                <dt>{{p.name}}</dt><dd>{{p.v + (p.unit || '')}}</dd>
+                                                <dt>{{p.name}}</dt>
+                                                <dd>{{p.v + (p.unit || '')}}</dd>
                                             </div>
                                         </dl>
                                     </div>
@@ -642,6 +644,7 @@
             specialSpec,
             indexes,
             genericSpec,
+            num: 1,
         },
         components: {
             lyTop: () => import('/js/pages/top.js'),
@@ -654,13 +657,13 @@
             images() {
                 return this.sku.images ? this.sku.images.split(",") : [''];
             },
-            groups(){
+            groups() {
                 groups.forEach(group => {
                     group.params.forEach(param => {
-                        if(param.generic){
+                        if (param.generic) {
                             // 通用属性，去spu的genericSpec中获取
                             param.v = this.genericSpec[param.id] || '其它';
-                        }else{
+                        } else {
                             // 特有属性值，去SKU中获取
                             param.v = JSON.parse(this.sku.ownSpec)[param.id]
                         }
@@ -668,6 +671,46 @@
                 });
                 return groups;
             },
+        },
+        methods: {
+            increment() {
+                this.num++;
+            },
+            decrement() {
+                if (this.num > 1)
+                    this.num--;
+            },
+            addCart(){
+                ly.verifyUser().then(res=>{
+                    // 已登录发送信息到后台，保存到redis中
+
+                }).catch(()=>{
+                    // 未登录保存在浏览器本地的localStorage中
+                    // 1、查询本地购物车
+                    let carts = ly.store.get("carts") || [];
+                    let cart = carts.find(c=>c.skuId===this.sku.id);
+                    // 2、判断是否存在
+                    if (cart) {
+                        // 3、存在更新数量
+                        cart.num += this.num;
+                    } else {
+                        // 4、不存在，新增
+                        cart = {
+                            skuId: this.sku.id,
+                            title: this.sku.title,
+                            price: this.sku.price,
+                            image: this.sku.images,
+                            num: this.num,
+                            ownSpec: this.ownSpec
+                        };
+                        carts.push(cart);
+                    }
+                    // 把carts写回localstorage
+                    ly.store.set("carts", carts);
+                    // 跳转
+                    window.location.href = "http://www.sc1.com/cart.html";
+                });
+            }
         }
     });
 </script>
